update homework